[gd_scene load_steps=2 format=2]

[ext_resource path="res://TileScroller.gd" type="Script" id=1]

[node name="TileScroller" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Position2D" type="Position2D" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = -9.0
margin_right = 57.0
margin_bottom = 21.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 18.0
margin_top = 25.0
margin_right = 59.0
margin_bottom = 55.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
